# thermometer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pytest_simple_ota.py  sdkconfig  sdkconfig.ci.tls1_2_dynamic  sdkconfig.ci.tls1_3_only_dynamic  sdkconfig.defaults
.devcontainer/: .gitattributes  Dockerfile  devcontainer.json  docker-compose.yml  idf_cmake.sh
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  marcpawl_inplace_string.hpp  marcpawl_inplace_vector.hpp  model.cpp  model.hpp  ota_task.cpp  ota_task.hpp  poster_task.cpp  poster_task.hpp  publish_subscribe.hpp  rtc_clock.cpp  rtc_clock.hpp  sensor_readings.hpp  sensor_task.cpp  sensor_task.hpp  sequence_lock.hpp  simple_ota_example.c  simple_ota_example.cpp  ticks.hpp
test/: test_inplace_string.cpp  test_inplace_vector.cpp
